--- a/ZXcList1.tex
+++ b/ZXcList1.tex
@@ -5,561 +5,637 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-<<<<<<< Updated upstream
-\cardbackground{Gem} 
-\cardimage{G6} 
-\cardtitle{Skyglass} 
+\cardbackground{Power} 
+\cardimage{N2} 
+\cardtitle{Knotted Teeth} 
 \cardborder{} 
-\cardcontent{When you develop this, you may adjust the intensity by 2. \newline Gain 2 \Money. newline If Intensity is 5 or higher, gain 1 charge.} 
-\cardprice{4} 
-\carddevcost{3} 
-\sync{0.16}
-=======
-\cardbackground{Spell} 
-\cardimage{m1} 
-\cardtitle{Fabric Rend} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 1 damage. You may discard a card in hand. If you do, gain 1 knowledge.} 
-\cardprice{0} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{m1} 
-\cardtitle{Reality Weaver} 
-\cardborder{} 
-\cardcontent{Gain 1 \Money{}. The next time you gain a charge this turn, Adstra gains 1 knowledge.} 
-\cardprice{0} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{m2} 
-\cardtitle{Mutalium} 
-\cardborder{} 
-\cardcontent{While prepped, once per turing during your main phase gain 1 \Money. \newline \Cast: Deal 1 damage.} 
-\cardprice{0} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{m3} 
-\cardtitle{Uppite} 
-\cardborder{} 
-\cardcontent{Gain 1 \Money \newline \Or \newline Destroy a spell in hand. Gain a spell that costs up to 3 \Money more than it from the supply.} 
-\cardprice{0} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{m3} 
-\cardtitle{Spinner} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 1 damage.} 
+\cardcontent{\To \Discard: Remove two nemesis tokens from the Ouroboros board. \newline \Power 2: Any player suffers 5 damage.} 
 \cardprice{1} 
-\sync{0.17}
->>>>>>> Stashed changes
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Gem} 
-<<<<<<< Updated upstream
-\cardimage{G6} 
-\cardtitle{Skyglass} 
+\cardbackground{Power} 
+\cardimage{N2} 
+\cardtitle{Scales of Infinity} 
 \cardborder{} 
-\cardcontent{When you develop this, you may adjust the intensity by 2. \newline Gain 2 \Money. newline If Intensity is 5 or higher, gain 1 charge.} 
-\cardprice{4} 
-\carddevcost{3} 
-\sync{0.16}
-=======
-\cardimage{m5} 
-\cardtitle{Stashite} 
-\cardborder{} 
-\cardcontent{Gain a charge. \newline \Or \newline Gain 2 \Money that can only be used to gain cards from Rel'kar's Armory.} 
-\cardprice{0} 
-\sync{0.17}
->>>>>>> Stashed changes
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-<<<<<<< Updated upstream
-\cardimage{G6} 
-\cardtitle{Skyglass} 
-\cardborder{} 
-\cardcontent{When you develop this, you may adjust the intensity by 2. \newline Gain 2 \Money. newline If Intensity is 5 or higher, gain 1 charge.} 
-\cardprice{4} 
-\carddevcost{3} 
-\sync{0.16}
-=======
-\cardimage{m6} 
-\cardtitle{Pilite} 
-\cardborder{} 
-\cardcontent{When a turn order card is drawn, you may discard this and draw a card to place that turn order card on the bottom of the turn order deck instead of resolving it. \newline Gain 1 \Money.} 
-\cardprice{0} 
-\sync{0.17}
->>>>>>> Stashed changes
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-<<<<<<< Updated upstream
-\cardimage{G6} 
-\cardtitle{Skyglass} 
-\cardborder{} 
-\cardcontent{When you develop this, you may adjust the intensity by 2. \newline Gain 2 \Money. newline If Intensity is 5 or higher, gain 1 charge.} 
-\cardprice{4} 
-\carddevcost{3} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G6} 
-\cardtitle{Skyglass} 
-\cardborder{} 
-\cardcontent{When you develop this, you may adjust the intensity by 2. \newline Gain 2 \Money. newline If Intensity is 5 or higher, gain 1 charge.} 
-\cardprice{4} 
-\carddevcost{3} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G6} 
-\cardtitle{Skyglass} 
-\cardborder{} 
-\cardcontent{When you develop this, you may adjust the intensity by 2. \newline Gain 2 \Money. newline If Intensity is 5 or higher, gain 1 charge.} 
-\cardprice{4} 
-\carddevcost{3} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G6} 
-\cardtitle{Skyglass} 
-\cardborder{} 
-\cardcontent{When you develop this, you may adjust the intensity by 2. \newline Gain 2 \Money. newline If Intensity is 5 or higher, gain 1 charge.} 
-\cardprice{4} 
-\carddevcost{3} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S9} 
-\cardtitle{Paradox Coil} 
-\cardborder{} 
-\cardcontent{When you develop this, suffer 1 damage. \newline \Cast: Deal 5 damage. Increase the intensity by 1. \newline \Or \newline \Cast: If the Intensity is 6, deal 8 damage.} 
-\cardprice{7} 
-\carddevcost{3} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S9} 
-\cardtitle{Paradox Coil} 
-\cardborder{} 
-\cardcontent{When you develop this, suffer 1 damage. \newline \Cast: Deal 5 damage. Increase the intensity by 1. \newline \Or \newline \Cast: If the Intensity is 6, deal 8 damage.} 
-\cardprice{7} 
-\carddevcost{3} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S9} 
-\cardtitle{Paradox Coil} 
-\cardborder{} 
-\cardcontent{When you develop this, suffer 1 damage. \newline \Cast: Deal 5 damage. Increase the intensity by 1. \newline \Or \newline \Cast: If the Intensity is 6, deal 8 damage.} 
-\cardprice{7} 
-\carddevcost{3} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S9} 
-\cardtitle{Paradox Coil} 
-\cardborder{} 
-\cardcontent{When you develop this, suffer 1 damage. \newline \Cast: Deal 5 damage. Increase the intensity by 1. \newline \Or \newline \Cast: If the Intensity is 6, deal 8 damage.} 
-\cardprice{7} 
-\carddevcost{3} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S9} 
-\cardtitle{Paradox Coil} 
-\cardborder{} 
-\cardcontent{When you develop this, suffer 1 damage. \newline \Cast: Deal 5 damage. Increase the intensity by 1. \newline \Or \newline \Cast: If the Intensity is 6, deal 8 damage.} 
-\cardprice{7} 
-\carddevcost{3} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S10} 
-\cardtitle{Future Pulse} 
-\cardborder{} 
-\cardcontent{When you develop this, you may adjust the Intensity by up to 2. \newline \Cast: Deal 4 damage. If the Intensity is 6, any ally gains 2 charges.} 
-\cardprice{6} 
-\carddevcost{4} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S10} 
-\cardtitle{Future Pulse} 
-\cardborder{} 
-\cardcontent{When you develop this, you may adjust the Intensity by up to 2. \newline \Cast: Deal 4 damage. If the Intensity is 6, any ally gains 2 charges.} 
-\cardprice{6} 
-\carddevcost{4} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S10} 
-\cardtitle{Future Pulse} 
-\cardborder{} 
-\cardcontent{When you develop this, you may adjust the Intensity by up to 2. \newline \Cast: Deal 4 damage. If the Intensity is 6, any ally gains 2 charges.} 
-\cardprice{6} 
-\carddevcost{4} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S10} 
-\cardtitle{Future Pulse} 
-\cardborder{} 
-\cardcontent{When you develop this, you may adjust the Intensity by up to 2. \newline \Cast: Deal 4 damage. If the Intensity is 6, any ally gains 2 charges.} 
-\cardprice{6} 
-\carddevcost{4} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S10} 
-\cardtitle{Future Pulse} 
-\cardborder{} 
-\cardcontent{When you develop this, you may adjust the Intensity by up to 2. \newline \Cast: Deal 4 damage. If the Intensity is 6, any ally gains 2 charges.} 
-\cardprice{6} 
-\carddevcost{4} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R3} 
-\cardtitle{Galactic Knife} 
-\cardborder{} 
-\cardcontent{Any ally gains 2 \Money tokens. \newline \Or \newline Any player destroys a card in their discard pile. If that card costs 3 \Money or more, Gravehold gains 3 life.} 
-\cardprice{3} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R3} 
-\cardtitle{Galactic Knife} 
-\cardborder{} 
-\cardcontent{Any ally gains 2 \Money tokens. \newline \Or \newline Any player destroys a card in their discard pile. If that card costs 3 \Money or more, Gravehold gains 3 life.} 
-\cardprice{3} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R3} 
-\cardtitle{Galactic Knife} 
-\cardborder{} 
-\cardcontent{Any ally gains 2 \Money tokens. \newline \Or \newline Any player destroys a card in their discard pile. If that card costs 3 \Money or more, Gravehold gains 3 life.} 
-\cardprice{3} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R3} 
-\cardtitle{Galactic Knife} 
-\cardborder{} 
-\cardcontent{Any ally gains 2 \Money tokens. \newline \Or \newline Any player destroys a card in their discard pile. If that card costs 3 \Money or more, Gravehold gains 3 life.} 
-\cardprice{3} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R3} 
-\cardtitle{Galactic Knife} 
-\cardborder{} 
-\cardcontent{Any ally gains 2 \Money tokens. \newline \Or \newline Any player destroys a card in their discard pile. If that card costs 3 \Money or more, Gravehold gains 3 life.} 
-\cardprice{3} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R9} 
-\cardtitle{Jailed Sun} 
-\cardborder{} 
-\cardcontent{When you develop this, you may adjust the intensity by up to 1. newline \newline Any ally reveals the top three cards of their deck, places one into their hand and discards the rest.} 
-\cardprice{3} 
-\carddevcost{2} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R9} 
-\cardtitle{Jailed Sun} 
-\cardborder{} 
-\cardcontent{When you develop this, you may adjust the intensity by up to 1. newline \newline Any ally reveals the top three cards of their deck, places one into their hand and discards the rest.} 
-\cardprice{3} 
-\carddevcost{2} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R9} 
-\cardtitle{Jailed Sun} 
-\cardborder{} 
-\cardcontent{When you develop this, you may adjust the intensity by up to 1. newline \newline Any ally reveals the top three cards of their deck, places one into their hand and discards the rest.} 
-\cardprice{3} 
-\carddevcost{2} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R9} 
-\cardtitle{Jailed Sun} 
-\cardborder{} 
-\cardcontent{When you develop this, you may adjust the intensity by up to 1. newline \newline Any ally reveals the top three cards of their deck, places one into their hand and discards the rest.} 
-\cardprice{3} 
-\carddevcost{2} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R9} 
-\cardtitle{Jailed Sun} 
-\cardborder{} 
-\cardcontent{When you develop this, you may adjust the intensity by up to 1. newline \newline Any ally reveals the top three cards of their deck, places one into their hand and discards the rest.} 
-\cardprice{3} 
-\carddevcost{2} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S11} 
-\cardtitle{Ashstorm} 
-\cardborder{} 
-\cardcontent{While prepped, you may prep an additional spell that costs 6 \Money or more to this breach. When a different spell is cast from the breach this is prepped to, that spell deals 2 additional damage. \newline \Cast: Deal 3 damage.} 
-\cardprice{4} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S11} 
-\cardtitle{Ashstorm} 
-\cardborder{} 
-\cardcontent{While prepped, you may prep an additional spell that costs 6 \Money or more to this breach. When a different spell is cast from the breach this is prepped to, that spell deals 2 additional damage. \newline \Cast: Deal 3 damage.} 
-\cardprice{4} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S11} 
-\cardtitle{Ashstorm} 
-\cardborder{} 
-\cardcontent{While prepped, you may prep an additional spell that costs 6 \Money or more to this breach. When a different spell is cast from the breach this is prepped to, that spell deals 2 additional damage. \newline \Cast: Deal 3 damage.} 
-\cardprice{4} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S11} 
-\cardtitle{Ashstorm} 
-\cardborder{} 
-\cardcontent{While prepped, you may prep an additional spell that costs 6 \Money or more to this breach. When a different spell is cast from the breach this is prepped to, that spell deals 2 additional damage. \newline \Cast: Deal 3 damage.} 
-\cardprice{4} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S11} 
-\cardtitle{Ashstorm} 
-\cardborder{} 
-\cardcontent{While prepped, you may prep an additional spell that costs 6 \Money or more to this breach. When a different spell is cast from the breach this is prepped to, that spell deals 2 additional damage. \newline \Cast: Deal 3 damage.} 
-\cardprice{4} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S18} 
-\cardtitle{End's Ripple} 
-\cardborder{} 
-\cardcontent{\Cast: Focus any player's breach. Repeat this. Deal 3 damage. \newline \Or \newline \Cast: If any player has no closed breaches, deal 7 damage.} 
-\cardprice{7} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S18} 
-\cardtitle{End's Ripple} 
-\cardborder{} 
-\cardcontent{\Cast: Focus any player's breach. Repeat this. Deal 3 damage. \newline \Or \newline \Cast: If any player has no closed breaches, deal 7 damage.} 
-\cardprice{7} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S18} 
-\cardtitle{End's Ripple} 
-\cardborder{} 
-\cardcontent{\Cast: Focus any player's breach. Repeat this. Deal 3 damage. \newline \Or \newline \Cast: If any player has no closed breaches, deal 7 damage.} 
-\cardprice{7} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S18} 
-\cardtitle{End's Ripple} 
-\cardborder{} 
-\cardcontent{\Cast: Focus any player's breach. Repeat this. Deal 3 damage. \newline \Or \newline \Cast: If any player has no closed breaches, deal 7 damage.} 
-\cardprice{7} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{S18} 
-\cardtitle{End's Ripple} 
-\cardborder{} 
-\cardcontent{\Cast: Focus any player's breach. Repeat this. Deal 3 damage. \newline \Or \newline \Cast: If any player has no closed breaches, deal 7 damage.} 
-\cardprice{7} 
-\sync{0.16}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R14} 
-\cardtitle{Shifting Glass} 
-\cardborder{} 
-\cardcontent{When you gain this, increase the intensity by 2. \newline Gain a charge. Adjust the intensity by up to 2.} 
+\cardcontent{When a power token is removed from this, increase the intensity by 1 and Unleash. \newline \Power 2: The players collectively discard three cards in hand. Gravehold suffers 2 damage.} 
 \cardprice{2} 
-\sync{0.16}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R14} 
-\cardtitle{Shifting Glass} 
+\cardbackground{Minion} 
+\cardimage{N2} 
+\cardtitle{Jagged Tear} 
 \cardborder{} 
-\cardcontent{When you gain this, increase the intensity by 2. \newline Gain a charge. Adjust the intensity by up to 2.} 
+\cardcontent{\Persistent: Remove a nemesis token from the Ouroboros board. Unleash twice.} 
+\cardprice{3} 
+\cardhp{8} 
+\cardshield{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{N2} 
+\cardtitle{Hissing Madness} 
+\cardborder{} 
+\cardcontent{\Power 2: Destroy the four least expensive supply piles. Unleash three times.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{N4} 
+\cardtitle{Reform} 
+\cardborder{} 
+\cardcontent{Gravehold suffers 2 damage. \newline Place a card from the most expensive gem supply pile on top of the construct deck. } 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{N4} 
+\cardtitle{Collect Scrap} 
+\cardborder{} 
+\cardcontent{Place a card from three different supply piles on top of the construct deck. \newline \Or \newline Gravehold suffers 4 damage.} 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{N4} 
+\cardtitle{Breathe Life} 
+\cardborder{} 
+\cardcontent{\Immediately: Shuffle the construct deck. \newline \Power 2: Unleash twice. Gravehold suffers 2 damage.} 
 \cardprice{2} 
-\sync{0.16}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R14} 
-\cardtitle{Shifting Glass} 
+\cardbackground{Power} 
+\cardimage{N4} 
+\cardtitle{Meld Bone} 
 \cardborder{} 
-\cardcontent{When you gain this, increase the intensity by 2. \newline Gain a charge. Adjust the intensity by up to 2.} 
+\cardcontent{\To \Discard: Place three cards on top of the construct deck from any supply pile. \newline \Power 2: Gravehold suffers 8 damage.} 
 \cardprice{2} 
-\sync{0.16}
-=======
-\cardimage{m8} 
-\cardtitle{Tralite} 
-\cardborder{} 
-\cardcontent{While prepped, when you cast a spell you may prevent the damage that spell would do and instead gain that much aether instead. \newline \Cast: Deal 1 damage.} 
-\cardprice{0} 
-\sync{0.17}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{m9} 
-\cardtitle{Mistite} 
+\cardbackground{Power} 
+\cardimage{N4} 
+\cardtitle{Silver Tsunami} 
 \cardborder{} 
-\cardcontent{Gain 1 \Money. \newline \Or \newline Cast a spell prepped to one of your breaches.} 
-\cardprice{0} 
-\sync{0.17}
+\cardcontent{\Power 1: Place the supply pile with the most cards in it on top of the construct deck. \newline If there's no golem in play, remove a power token from Fuse, and remove a power token from Fuse. Otherwise, Gravehold suffers 5 damage.} 
+\cardprice{3} 
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{m10} 
-\cardtitle{Duplite} 
+\cardbackground{Attack} 
+\cardimage{N3} 
+\cardtitle{Regrow} 
 \cardborder{} 
-\cardcontent{Gain 1 \Money. \newline \Or \newline Destroy a card from the supply of a gem or relic you played this turn. If you do, resolve that card's effect again.} 
-\cardprice{0} 
-\sync{0.17}
->>>>>>> Stashed changes
+\cardcontent{Remove a nemesis token from rows I and II.} 
+\cardprice{1} 
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-<<<<<<< Updated upstream
-\cardimage{R14} 
-\cardtitle{Shifting Glass} 
+\cardbackground{Power} 
+\cardimage{N3} 
+\cardtitle{Slithering Roots} 
 \cardborder{} 
-\cardcontent{When you gain this, increase the intensity by 2. \newline Gain a charge. Adjust the intensity by up to 2.} 
+\cardcontent{\To \Discard: Spend 6 \Money. \newline \Power 3: Remove a nemesis token from two different rows.} 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{N3} 
+\cardtitle{Fumedrinker} 
+\cardborder{} 
+\cardcontent{\Persistent: Remove a nemesis token from row I.} 
+\cardprice{1} 
+\cardhp{4} 
+\cardshield{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{N3} 
+\cardtitle{Thicken} 
+\cardborder{} 
+\cardcontent{Remove a nemesis token from the row with the fewest nemesis tokens. Repeat this.} 
 \cardprice{2} 
-\sync{0.16}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R14} 
-\cardtitle{Shifting Glass} 
+\cardbackground{Power} 
+\cardimage{N3} 
+\cardtitle{Blood Harvest} 
 \cardborder{} 
-\cardcontent{When you gain this, increase the intensity by 2. \newline Gain a charge. Adjust the intensity by up to 2.} 
+\cardcontent{\To \Discard: Spend 7 \Money. \newline \Power 3: Remove all but one nemesis token from the row with the most nemesis tokens.} 
 \cardprice{2} 
-\sync{0.16}
-=======
-\cardimage{m11} 
-\cardtitle{Grodite} 
-\cardborder{} 
-\cardcontent{Focus your closed breach with the lowest focus cost.} 
-\cardprice{0} 
-\sync{0.17}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{m11} 
-\cardtitle{Breachal} 
+\cardbackground{Minion} 
+\cardimage{N3} 
+\cardtitle{Blackgill} 
 \cardborder{} 
-\cardcontent{While prepped, when one of your breaches is opened, gain a charge. \newline \Cast: Deal 1 damage.} 
-\cardprice{0} 
-\sync{0.17}
->>>>>>> Stashed changes
+\cardcontent{When a player deals damage to this, remove a nemesis token from the row matching the breach that spell was cast from. \newline \Persistent: Gravehold suffers 2 damage.} 
+\cardprice{2} 
+\cardhp{8} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{N3} 
+\cardtitle{Thorny Growths} 
+\cardborder{} 
+\cardcontent{\Power 1: Remove all nemesis tokens from row I. Place this next to the track. For the rest of the game, nemesis tokens cannot be added to row I.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{N3} 
+\cardtitle{Tortugan} 
+\cardborder{} 
+\cardcontent{While this is in play, nemesis tokens cannot be added to the track. \newline \Persistent: Remove two nemesis tokens from row IV.} 
+\cardprice{3} 
+\cardhp{6} 
+\cardshield{4} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{N7} 
+\cardtitle{Spread Death} 
+\cardborder{} 
+\cardcontent{\Power 3: Place a portal token into play. Place one void token adjacent to this portal token.} 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{N7} 
+\cardtitle{Overwhelm Nature} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 6 \Money. \newline \Power 2: Gravehold suffers 2 damage. Unleash. If no Void tokens were placed on icons, Unleash again.} 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{N7} 
+\cardtitle{Acidic Unfurl} 
+\cardborder{} 
+\cardcontent{\Power 2: Unleash. If there are 8 or less void tokens in play, Unleash again. Resolve the effects of void tokens placed by this card an additional time.} 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{N7} 
+\cardtitle{Void Infection} 
+\cardborder{} 
+\cardcontent{\Power 2: Place a portal token into play. Unleash.} 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{N7} 
+\cardtitle{Toxorac} 
+\cardborder{} 
+\cardcontent{\Defeated: Place a portal token into play.  \Persistent: Any player suffers 2 damage.} 
+\cardprice{2} 
+\cardhp{8} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{N7} 
+\cardtitle{Acidic Reaver} 
+\cardborder{} 
+\cardcontent{While this is in play, prevent damage dealt to void or portal tokens. \newline \Persistent: Gravehold suffers 3 damage.} 
+\cardprice{3} 
+\cardhp{11} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{N7} 
+\cardtitle{World Collapse} 
+\cardborder{} 
+\cardcontent{Any player and Gravehold each suffer 4 damage. \newline \Or \newline Place a portal token into play, and Unleash twice.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{N5} 
+\cardtitle{Corroding Radiance} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 6 \Money. \newline \Power 3: The nemesis becomes polarized. Any player suffers 2 damage.} 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{N5} 
+\cardtitle{Tarnished} 
+\cardborder{} 
+\cardcontent{\Persistent: Unleash. Any player places a card in hand on top of their deck.} 
+\cardprice{1} 
+\cardhp{3} 
+\cardshield{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{N8} 
+\cardtitle{Eyeless Gaze} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 5 \Money. \newline  \Power 2: Destroy 1 bait on the board. Unleash.} 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{N8} 
+\cardtitle{Dread Advance} 
+\cardborder{} 
+\cardcontent{Destroy a boulder on the board. Move the nemesis one space on the board. Unleash and any player suffers 2 damage.} 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{N8} 
+\cardtitle{In Our Sight} 
+\cardborder{} 
+\cardcontent{Remove two bait from the board. Unleash twice. \newline \Or \newline Any player suffers 5 damage. } 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{N8} 
+\cardtitle{End of Days} 
+\cardborder{} 
+\cardcontent{Destroy a boulder and a bait on the board. Any player suffers 4 damage. \newline \Or \newline The players collectively destroy the two most expensive prepped spells.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{N8} 
+\cardtitle{Silverbite} 
+\cardborder{} 
+\cardcontent{\Persistent: Unleash. Move the nemesis to a space that does not have a bait in the same row or column.} 
+\cardprice{3} 
+\cardhp{13} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{N8} 
+\cardtitle{Rampage Incarnate} 
+\cardborder{} 
+\cardcontent{\Immediately: Unleash. \newline \Power 1: Unleash. Instead of discarding this, place 1 power token on this.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{general} 
+\cardtitle{Rattle} 
+\cardborder{} 
+\cardcontent{Any player suffers 4 damage. \newline \Or \newline Unleash. Gravehold suffers damage equal to the intensity.  } 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{general} 
+\cardtitle{Mayhem} 
+\cardborder{} 
+\cardcontent{Unleash twice. Adjust the intensity by up to 2. \newline \Or \newline Any player and Gravehold each suffer 2 damage.} 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{general} 
+\cardtitle{Vexthorn} 
+\cardborder{} 
+\cardcontent{\Persistent: If the intensity is 4 or higher, Gravehold suffers 3 damage. Otherwise, any player suffers 2 damage} 
+\cardprice{1} 
+\cardhp{3} 
+\cardshield{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{general} 
+\cardtitle{Obilax} 
+\cardborder{} 
+\cardcontent{\Immediately: If the intensity is 4 or higher, this suffers 2 damage and gains 2 shield tokens. \newline \Persistent: Any player suffers 2 damage.} 
+\cardprice{2} 
+\cardhp{8} 
+\cardshield{*} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{general} 
+\cardtitle{Nethermaw} 
+\cardborder{} 
+\cardcontent{\Defeated: If the intensity is 4 or higher, Unleash twice. \Persistent: Gravehold suffers 2 damage.} 
+\cardprice{2} 
+\cardhp{8} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{general} 
+\cardtitle{Flesh Crunch} 
+\cardborder{} 
+\cardcontent{Unleash. \newline The player with the most expensive card in hand destroys three cards in hand or suffers 4 damage.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{general} 
+\cardtitle{Arcane Collapse} 
+\cardborder{} 
+\cardcontent{\To \Discard: Destroy an opened breach. If the intensity is 4 or higher, destroy an additional opened breach and your two most expensive cards in hand. \newline \Power 1: Unleash three times.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{upgraded-basic} 
+\cardtitle{Dire Resonance} 
+\cardborder{} 
+\cardcontent{Any player suffers 5 damage and discards a prepped spell. \newline \Or \newline Unleash twice. Gravehold suffers damage equal to the intensity minus 2.} 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{upgraded-basic} 
+\cardtitle{Mind Shatter} 
+\cardborder{} 
+\cardcontent{Unleash. \newline If the Intensity is 4 or higher, any player suffers 4 damage and discards three cards in hand. Otherwise, Any player suffers 3 damage and discards two cards in hand.} 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{upgraded-basic} 
+\cardtitle{Wail} 
+\cardborder{} 
+\cardcontent{Unleash twice. Adjust the intensity by up to 2. Any player suffers 2 damage.} 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{upgraded-basic} 
+\cardtitle{Ferrous Warrior} 
+\cardborder{} 
+\cardcontent{\Persistent: If the intensity is 3 or higher, Gravehold suffers 3 damage. Otherwise, any player suffers 2 damage} 
+\cardprice{1} 
+\cardhp{5} 
+\cardshield{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{upgraded-basic} 
+\cardtitle{Crystallized Stinger} 
+\cardborder{} 
+\cardcontent{\Persistent: Unleash. If the intensity is 4 or higher, Unleash and reduce the Intensity by 1.} 
+\cardprice{1} 
+\cardhp{6} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{upgraded-basic} 
+\cardtitle{Falling Sky} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 6 \Money{}. \newline \Power 4: Unleash twice. Gravehold suffers 5 damage.} 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{upgraded-basic} 
+\cardtitle{Unease} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 5 \Money. \newline \Power 2: Unleash. Increase the intensity by 2. The players collectively discard cards in hand equal to the intensity.} 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{upgraded-basic} 
+\cardtitle{Building Tremor} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 6 \Money{}. \newline \Power 3: Unleash. If the intensity is 3 or higher, Unleash twice.} 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{upgraded-basic} 
+\cardtitle{Thunderclap} 
+\cardborder{} 
+\cardcontent{Unleash twice. \newline Any player gains a charge and suffers 4 damage. \Or \newline \Or Gravehold suffers 5 damage.} 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{upgraded-basic} 
+\cardtitle{Curdle} 
+\cardborder{} 
+\cardcontent{If the intensity is 5 or higher, Gravehold suffers 7 damage. Otherwise, Any player discards three cards in hand and suffers 4 damage.} 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{upgraded-basic} 
+\cardtitle{Spiral} 
+\cardborder{} 
+\cardcontent{Unleash twice. \newline The players collectively discard two prepped spells. Any player suffers 2 damage.} 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{upgraded-basic} 
+\cardtitle{Portal Screecher} 
+\cardborder{} 
+\cardcontent{\Immediately: If the intensity is 3 or higher, this suffers 2 damage and gains 3 shield tokens. \newline \Persistent: Any player suffers 2 damage and discards a card in hand.} 
+\cardprice{2} 
+\cardhp{8} 
+\cardshield{*} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{upgraded-basic} 
+\cardtitle{Lacerated Flailer} 
+\cardborder{} 
+\cardcontent{\Defeated: If the intensity is 4 or higher, Unleash twice. \newline \Persistent: Unleash. Gravehold suffers 2 damage.} 
+\cardprice{2} 
+\cardhp{9} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{upgraded-basic} 
+\cardtitle{Aura of Devastation} 
+\cardborder{} 
+\cardcontent{\Immediately: Increase the intensity by 2. \newline \To \Discard: Spend 8 \Money. \newline \Power 2: Unleash twice. Reduce the intensity by 2. If the intensity is 3 or higher, repeat this.} 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{upgraded-basic} 
+\cardtitle{Soul Bleed} 
+\cardborder{} 
+\cardcontent{\To \Discard: Discard four cards in hand. \newline \Power 2: Unleash three times. The players discard each prepped spell that costs equal to or greater than the intensity.} 
+\cardprice{2} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{upgraded-basic} 
+\cardtitle{Cut Down} 
+\cardborder{} 
+\cardcontent{Unleash four times. \newline \Or \newline Gravehold suffers 8 damage. \newline \Or \newline Any player suffers 6 damage. } 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{upgraded-basic} 
+\cardtitle{Snap} 
+\cardborder{} 
+\cardcontent{Unleash twice. \newline Any player suffers 2 damage and destroys their two most expensive cards in hand.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{upgraded-basic} 
+\cardtitle{Splinter} 
+\cardborder{} 
+\cardcontent{Unleash three times. \newline Gravehold suffers 4 damage.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{upgraded-basic} 
+\cardtitle{Cosmic Bolt} 
+\cardborder{} 
+\cardcontent{Unleash twice. \newline The player with the most expensive card in hand destroys four cards in hand or suffers 6 damage.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{upgraded-basic} 
+\cardtitle{Undying Ones} 
+\cardborder{} 
+\cardcontent{\Immediately: Increase the intensity by 2. \newline \Persistent: If the intensity is 4 or higher, Gravehold suffers damage equal to the intensity. Otherwise, Unleash twice.} 
+\cardprice{3} 
+\cardhp{13} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{upgraded-basic} 
+\cardtitle{Mage's Doom} 
+\cardborder{} 
+\cardcontent{\To \Discard: If the intensity is 3 or higher, destroy three opened breaches, otherwise destroy one opened breach. \newline \Power 2: Unleash four times.} 
+\cardprice{3} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{upgraded-basic} 
+\cardtitle{Strength Sap} 
+\cardborder{} 
+\cardcontent{\Power 2: Unleash. The player with the most expensive prepped spell destroys it. If that spell costs less than the intensity, Unleash twice and any player suffers 4 damage.} 
+\cardprice{3} 
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
