--- a/charSheetAdstra.tex
+++ b/charSheetAdstra.tex
@@ -5,7 +5,7 @@
 \cardborder 
 \basicinfo 
 \name{Adstra}{m1}
-\ability{Bend Reality: Activate during your main phase: Gain 3 knowledge. \\newline \Or \\newline Spend 3 knowledge to destroy two cards in hand.}{4}
+\ability{Bend Reality: Activate during your main phase: Gain 3 knowledge. \newline \Or \newline Spend 3 knowledge to destroy two cards in hand.}{4}
 \startingDeck{Reality Weaver}{Crystal}{Crystal}{Crystal}{Spark}
 \startingHand{Fabric Rend}{Crystal}{Crystal}{Crystal}{Crystal}
 \notes{When you cast a spell, you may spend any number of knowledge to increase the damage of that spell by the amount of knowledge spent. When you play a gem or relic, you may spend any number of knowledge to gain 1 additional \Money per knowledge spent.}
