--- a/charSheetDagger.tex
+++ b/charSheetDagger.tex
@@ -5,7 +5,7 @@
 \cardborder 
 \basicinfo 
 \name{Dagger}{m2}
-\ability{Fabricate: Activate during your main phase: Gain a spell from any supply pile and place it on top of your deck. \\newline \Or \\newline Gravehold gains 5 life.}{5}
+\ability{Fabricate: Activate during your main phase: Gain a spell from any supply pile and place it on top of your deck. \newline \Or \newline Gravehold gains 5 life.}{5}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
 \startingHand{Mutalium}{Crystal}{Crystal}{Crystal}{Crystal}
 \notes{Spells that cost 5 \Money or more that are cast from Dagger's opened breaches deal 2 additional damage.}
