--- a/ZXcList0.tex
+++ b/ZXcList0.tex
@@ -5,850 +5,213 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-<<<<<<< Updated upstream
-\cardbackground{Power} 
-\cardimage{N4} 
-\cardtitle{Fuse} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Nook's Superior Crystal} 
 \cardborder{} 
-\cardcontent{\Power 4: Weld a Golem. \newline Instead of discarding this, place three power tokens on this. } 
+\cardcontent{At the start of the game, if this is in your starting deck, gain an Empty Crystal. \newline Gain 3 \Money.} 
 \cardprice{0} 
-\sync{0.16}
-=======
-\cardbackground{Power} 
-\cardimage{N4} 
-\cardtitle{Fuse} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Nook's Empty Crystal} 
 \cardborder{} 
-\cardcontent{\Power 4: Weld a Golem. \newline Instead of discarding this, place three power tokens on this. } 
+\cardcontent{Gain 0 \Money.} 
 \cardprice{0} 
-\sync{0.17}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N4} 
-\cardtitle{Golem} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Indira's Fused Opal} 
 \cardborder{} 
-\cardcontent{Don't resolve this minion's Persistent effect the turn it enters play. \newline \Persistent: Any player suffers damage equal to the number of nemesis tokens on this.} 
+\cardcontent{Gain 1 \Money. \newline \Or \newline Conjure.} 
 \cardprice{0} 
-\cardhp{*} 
-\sync{0.17}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N4} 
-\cardtitle{Golem} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Stake's Piercing Light} 
 \cardborder{} 
-\cardcontent{Don't resolve this minion's Persistent effect the turn it enters play. \newline \Persistent: Any player suffers damage equal to the number of nemesis tokens on this.} 
+\cardcontent{\Cast: Deal 1 damage. \newline If you have used your ability at least once this game, you may destroy this.} 
 \cardprice{0} 
-\cardhp{*} 
-\sync{0.17}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N4} 
-\cardtitle{Golem} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Wolf's Doomstone} 
 \cardborder{} 
-\cardcontent{Don't resolve this minion's Persistent effect the turn it enters play. \newline \Persistent: Any player suffers damage equal to the number of nemesis tokens on this.} 
+\cardcontent{Gain 3 \Money. Gain 2 doom. If you have 5 or more doom, suffer 5 damage and lose your doom. \newline \Or \newline Lose 1 doom.} 
 \cardprice{0} 
-\cardhp{*} 
-\sync{0.17}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N2} 
-\cardtitle{Whip Slash} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Wolf's Doomhowl} 
 \cardborder{} 
-\cardcontent{Adjust the intensity by 1. Remove one nemesis token from the board. Then, Unleash twice.} 
-\cardprice{1} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N2} 
-\cardtitle{Cinder Globe} 
-\cardborder{} 
-\cardcontent{\To \Discard: Remove two nemesis tokens from the Ouroboros board. \newline \Power 2: Any player suffers 5 damage.} 
-\cardprice{1} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N2} 
-\cardtitle{Vorathos} 
-\cardborder{} 
-\cardcontent{When a player deals damage to this, move the nemesis back 1 space. \newline \Persistent: Move the nemesis forward 1 space.} 
-\cardprice{1} 
-\cardhp{4} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N2} 
-\cardtitle{Vicious Bite} 
-\cardborder{} 
-\cardcontent{Remove a nemesis token from the board. Move the nemesis token foward to the next chute. Unleash.} 
-\cardprice{2} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N2} 
-\cardtitle{Umbravore} 
-\cardborder{} 
-\cardcontent{When this is defeated, Unleash. \newline \Persistent: Remove a nemesis token from the board. Destroy a card in the least expensive supply pile.} 
-\cardprice{2} 
-\cardhp{10} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N2} 
-\cardtitle{Flesh Quake} 
-\cardborder{} 
-\cardcontent{When a power token is removed from this, increase the intensity by 1 and Unleash. \newline \Power 3: The players collectively discard three cards in hand.} 
-\cardprice{2} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N2} 
-\cardtitle{Bloody Shred} 
-\cardborder{} 
-\cardcontent{Remove three nemesis tokens from the Ouroboros board. Unleash twice.} 
-\cardprice{3} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N2} 
-\cardtitle{Jagged Tear} 
-\cardborder{} 
-\cardcontent{\Persistent: Remove a nemesis token from the Ouroboros board. Unleash twice.} 
-\cardprice{3} 
-\cardhp{11} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N2} 
-\cardtitle{Thunderous Roar} 
-\cardborder{} 
-\cardcontent{\Power 2: Destroy the four least expensive supply piles. Unleash three times.} 
-\cardprice{3} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N4} 
-\cardtitle{Shade Smash} 
-\cardborder{} 
-\cardcontent{Place a card from the most expensive gem supply pile on top of the construct deck.} 
-\cardprice{1} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N4} 
-\cardtitle{Blazing Maul} 
-\cardborder{} 
-\cardcontent{Place a card from three different supply piles on top of the construct deck. \newline \Or \newline Gravehold suffers 4 damage.} 
-\cardprice{1} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N4} 
-\cardtitle{Shattertusk} 
-\cardborder{} 
-\cardcontent{\Defeated: Remove a power token from Fuse. Repeat this. \newline \Persistent: Gravehold suffers 2 damage.} 
-\cardprice{1} 
-\cardhp{5} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N4} 
-\cardtitle{Feral Ram} 
-\cardborder{} 
-\cardcontent{\Immediately: Shuffle the construct deck. \newline \Power 2: Unleash twice. Gravehold suffers 2 damage.} 
-\cardprice{2} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N4} 
-\cardtitle{Crimson Bolt} 
-\cardborder{} 
-\cardcontent{\To \Discard: Place three cards on top of the construct deck from any supply pile. \newline \Power 2: Gravehold suffers 8 damage.} 
-\cardprice{2} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N4} 
-\cardtitle{Forgebearer} 
-\cardborder{} 
-\cardcontent{\Persistent: Remove a power token from Fuse. Unleash. This suffers 2 damage.} 
-\cardprice{2} 
-\cardhp{12} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N4} 
-\cardtitle{Intensify} 
-\cardborder{} 
-\cardcontent{Remove a power token from Fuse. Repeat this twice. Place an exact copy of a golem in play into play.} 
-\cardprice{3} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N4} 
-\cardtitle{The Risen} 
-\cardborder{} 
-\cardcontent{\Immediately: Remove a power token from Fuse. Repeat this. \newline \Persistent: A golem gains one nemesis token and resolves its effect \newline \Or \newline Gravehold suffers 4 damage.} 
-\cardprice{3} 
-\cardhp{11} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N4} 
-\cardtitle{Silver Tsunami} 
-\cardborder{} 
-\cardcontent{\Power 1: Place the supply pile with the most cards in it on top of the construct deck.} 
-\cardprice{3} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N3} 
-\cardtitle{Toughen Bone} 
-\cardborder{} 
-\cardcontent{Remove a nemesis token from rows I and II.} 
-\cardprice{1} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N3} 
-\cardtitle{Reinforce Plate} 
-\cardborder{} 
-\cardcontent{\To \Discard: Spend 6 \Money. \newline \Power 3: Remove a nemesis token from two different rows.} 
-\cardprice{1} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N3} 
-\cardtitle{Fumedrinker} 
-\cardborder{} 
-\cardcontent{\Persistent: Remove a nemesis token from row I.} 
-\cardprice{1} 
-\cardhp{5} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N3} 
-\cardtitle{Fortify} 
-\cardborder{} 
-\cardcontent{Remove a nemesis token from the row with the fewest nemesis tokens. Repeat this.} 
-\cardprice{2} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N3} 
-\cardtitle{Cleansing Aura} 
-\cardborder{} 
-\cardcontent{\To \Discard: Spend 7 \Money. \newline \Power 3: Remove all but one nemesis token from the row with the most nemesis tokens.} 
-\cardprice{2} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N3} 
-\cardtitle{Blackgill} 
-\cardborder{} 
-\cardcontent{When a player deals damage to this, remove a nemesis token from the row matching the breach that spell was cast from. \newline \Persistent: Gravehold suffers 3 damage.} 
-\cardprice{2} 
-\cardhp{9} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N3} 
-\cardtitle{Purge Weakness} 
-\cardborder{} 
-\cardcontent{\Power 1: Remove all nemesis tokens from row I. Place this next to the track. For the rest of the game, nemesis tokens cannot be added to row I.} 
-\cardprice{3} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N3} 
-\cardtitle{Tortugan} 
-\cardborder{} 
-\cardcontent{While this is in play, nemesis tokens cannot be added to the track. \newline \Persistent: Remove two nemesis tokens from row IV.} 
-\cardprice{3} 
-\cardhp{14} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N3} 
-\cardtitle{Armor Bloom} 
-\cardborder{} 
-\cardcontent{Remove a nemesis token from each row.} 
-\cardprice{3} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N7} 
-\cardtitle{Spread Death} 
-\cardborder{} 
-\cardcontent{\Power 3: Place a portal into play.} 
-\cardprice{1} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N7} 
-\cardtitle{Overwhelm Nature} 
-\cardborder{} 
-\cardcontent{\To \Discard: Spend 6 \Money. \newline \Power 3: Unleash. Void placed this way must be placed on icons if possible.} 
-\cardprice{1} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N7} 
-\cardtitle{Ash Tendril} 
-\cardborder{} 
-\cardcontent{\Persistent: Place void as close to a portal as possible.} 
-\cardprice{1} 
-\cardhp{8} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N7} 
-\cardtitle{Acidic Unfurl} 
-\cardborder{} 
-\cardcontent{\Power 2: Unleash. Resolve the effects of void placed this way twice.} 
-\cardprice{2} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N7} 
-\cardtitle{Viral Infection} 
-\cardborder{} 
-\cardcontent{\Power 3: Place a portal into play. Unleash.} 
-\cardprice{2} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N7} 
-\cardtitle{Toxorac} 
-\cardborder{} 
-\cardcontent{When this is defeated, place a portal into play. \newline \Persistent: Any player suffers 2 damage.} 
-\cardprice{2} 
-\cardhp{6} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N7} 
-\cardtitle{Inject Decay} 
-\cardborder{} 
-\cardcontent{Place a portal into play. Unleash.} 
-\cardprice{3} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N7} 
-\cardtitle{Acidic Reaver} 
-\cardborder{} 
-\cardcontent{While this is in play, prevent damage dealt to void or portals. \newline \Persistent: Gravehold suffers 3 damage.} 
-\cardprice{3} 
-\cardhp{9} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N7} 
-\cardtitle{Blooming Execute} 
-\cardborder{} 
-\cardcontent{Any player and Gravehold each suffer 4 damage. \newline \Or \newline Place a portal into play. Unleash twice.} 
-\cardprice{3} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N5} 
-\cardtitle{Spine Storm} 
-\cardborder{} 
-\cardcontent{\To \Discard: Spend 5 \Money. \newline  \Power 2: Unleash twice. Destroy three cards from the least expensive supply pile.} 
-\cardprice{1} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N5} 
-\cardtitle{Unveil Potential} 
-\cardborder{} 
-\cardcontent{\To \Discard: Spend 6 \Money. \newline \Power 3: The nemesis becomes polarized. Any player suffers 2 damage.} 
-\cardprice{1} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N5} 
-\cardtitle{Tarnished} 
-\cardborder{} 
-\cardcontent{\Persistent: Unleash. Any player places a card in hand on top of their deck.} 
-\cardprice{1} 
-\cardhp{5} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N5} 
-\cardtitle{Memory Suffocate} 
-\cardborder{} 
-\cardcontent{Any player places a card in hand on top of their deck. Repeat this twice. Any player suffers 3 damage.} 
-\cardprice{2} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N5} 
-\cardtitle{Memory Scar} 
-\cardborder{} 
-\cardcontent{\To \Discard: Spend 7 \Money. \newline \Power 2: Destroy each card in the least expensive supply pile. Repeat this. Any player suffers 5 damage.} 
-\cardprice{2} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N5} 
-\cardtitle{Echo} 
-\cardborder{} 
-\cardcontent{When this is defeated, the nemesis becomes polarized and gains 1 nemesis token. \newline \Persistent: Gravehold suffers 3 damage.} 
-\cardprice{2} 
-\cardhp{7} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N5} 
-\cardtitle{Ocular Erase} 
-\cardborder{} 
-\cardcontent{The players collectively destroy three cards in hand that cost 1 \Money or more. Gravehold suffers 5 damage.} 
-\cardprice{3} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N5} 
-\cardtitle{Eternal} 
-\cardborder{} 
-\cardcontent{While this is in play, the nemesis is polarized. \newline \Persistent: Gravehold suffers 3 damage. Any player gains a charge.} 
-\cardprice{3} 
-\cardhp{10} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N5} 
-\cardtitle{Overcharge} 
-\cardborder{} 
-\cardcontent{Any player suffers 7 damage and then gains 4 charges.} 
-\cardprice{3} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N8} 
-\cardtitle{Enrage} 
-\cardborder{} 
-\cardcontent{\Power 4: The nemesis rushes. \newline Instead of discarding this, place three power tokens on this. } 
+\cardcontent{\Cast: Deal 3 damage. Gain 2 doom. If you have 5 or more doom, suffer 5 damage and lose your doom. \newline \Or \newline \Cast: Lose 1 doom.} 
 \cardprice{0} 
-\sync{0.17}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N8} 
-\cardtitle{Flame Aura} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Dezmodia's Coil} 
 \cardborder{} 
-\cardcontent{\To \Discard: Spend 5 \Money. \newline  \Power 2: Destroy 1 bait on the board. Unleash.} 
-\cardprice{1} 
-\sync{0.17}
+\cardcontent{When you open a breach, any ally gains an \Money token. \newline \Cast: Deal 1 damage. If all your breaches are opened, deal 2 additional damage.} 
+\cardprice{0} 
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N8} 
-\cardtitle{Vicious Nudge} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Remnant's Violet Shard} 
 \cardborder{} 
-\cardcontent{Destroy a boulder on the board. Move the nemesis one space on the board. Unleash and any player suffers 2 damage.} 
-\cardprice{1} 
-\sync{0.17}
+\cardcontent{Gain 1 \Money. \newline Any ally may discard a card in hand. If they do, gain 2 \Money that can only be used to focus or open a breach.} 
+\cardprice{0} 
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N8} 
-\cardtitle{Gnarlspine} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Yan Magda's Foretold Flame} 
 \cardborder{} 
-\cardcontent{When a player deals damage to this, that player gains 1 charge. \newline \Persistent: Unleash and any player suffers 1 damage.} 
-\cardprice{1} 
-\cardhp{6} 
-\sync{0.17}
+\cardcontent{While this is prepped, when any player opens a breach, deal 2 damage. \newline \Cast: Deal 1 damage.} 
+\cardprice{0} 
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N8} 
-\cardtitle{Expel Distraction} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Tressa's Overload} 
 \cardborder{} 
-\cardcontent{Remove two bait from the board. Unleash twice. \newline \Or \newline Any player suffers 5 damage. } 
-\cardprice{2} 
-\sync{0.17}
+\cardcontent{\Cast: Deal 1 damage. If this is the third spell you cast this turn, deal 2 additional damage.} 
+\cardprice{0} 
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N8} 
-\cardtitle{Explosive Cave-out} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Inco's Genesis Emerald} 
 \cardborder{} 
-\cardcontent{\To \Discard: Spend 7 \Money. \newline \Power 3: Destroy two boulders on the board. Unleash.} 
-\cardprice{2} 
-\sync{0.17}
+\cardcontent{\small {Gain 1 \Money.} \newline \Or \newline \small {Discard two cards in hand. If you do, gain a spell that costs 5 \Money or less from the supply. Place that card on top of any player's discard pile.}} 
+\cardprice{0} 
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N8} 
-\cardtitle{Sinewraith} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Qu's Gift} 
 \cardborder{} 
-\cardcontent{When this is defeated, destroy a boulder on the board. \newline \Persistent: Any player suffers 2 damage.} 
-\cardprice{2} 
-\cardhp{11} 
-\sync{0.17}
+\cardcontent{Gain 1 \Money. \newline Place the next card you gain this turn on top of any ally's deck. If you do, gain 1 charge.} 
+\cardprice{0} 
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N8} 
-\cardtitle{Incinerate Instrusion} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Qu's Thievery} 
 \cardborder{} 
-\cardcontent{Destroy a boulder and a bait on the board. Any player suffers 4 damage. \newline \Or \newline The players collectively destroy the two most expensive prepped spells.} 
+\cardcontent{While this is prepped, when an ally gains a card, they may place it on top of your deck and gain 1 charge. \newline \Cast: Deal 1 damage.} 
+\cardprice{0} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Triplite Core} 
+\cardborder{} 
+\cardcontent{Gain 4 \Money{} that can only be used to gain cards.} 
 \cardprice{3} 
-\sync{0.17}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N8} 
-\cardtitle{Silverbite} 
+\cardbackground{Treasured gem} 
+\cardimage{Treasure} 
+\cardtitle{Shining Fluorite} 
 \cardborder{} 
-\cardcontent{\Persistent: Unleash. Move the nemesis to a space that does not have a bait in the same row or column.} 
+\cardcontent{Gain 3 \Money{}. \newline Place the next spell you gain this turn into your hand.} 
+\cardprice{4} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Treasured relic} 
+\cardimage{Treasure} 
+\cardtitle{Manifold Container} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. \newline When you gain a card this turn, you may also gain a card that costs less than the gained card.} 
 \cardprice{3} 
-\cardhp{10} 
-\sync{0.17}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N8} 
-\cardtitle{Rampage Incarnate} 
+\cardbackground{Treasured relic} 
+\cardimage{Treasure} 
+\cardtitle{Blast Sphere} 
 \cardborder{} 
-\cardcontent{\Power 1: Unleash. Place this power in play with 1 power token instead of discarding it.} 
-\cardprice{3} 
-\sync{0.17}
+\cardcontent{Cast any player's prepped spell three times without discarding it and then destroy it.} 
+\cardprice{5} 
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{general} 
-\cardtitle{Stomp} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Psychic Eruption} 
 \cardborder{} 
-\cardcontent{Any player suffers 4 damage. \newline \Or \newline Unleash. Gravehold suffers damage equal to the intensity.  } 
-\cardprice{1} 
-\sync{0.17}
+\cardcontent{\Cast: Any player reveals the top card of their deck and may discard it. That player may repeat this up to 4 additional times. Deal damage equal to the number of cards in any player's discard pile.} 
+\cardprice{6} 
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{general} 
-\cardtitle{Churn} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Drown in Flames} 
 \cardborder{} 
-\cardcontent{Unleash. \newline If the Intensity is 4 or higher, any player suffers 3 damage and discards two cards in hand. Otherwise, Any player suffers 2 damage and discards a card in hand.} 
-\cardprice{1} 
-\sync{0.17}
+\cardcontent{\Cast: Deal 4 damage to an enemy. \newline Any player may lose 2 charges. If they do, return this spell to the breach it was cast from. \newline (Effects that modify damage affect each instance of damage this spell deals.)} 
+\cardprice{4} 
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{general} 
-\cardtitle{Maul} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Tethered Darts} 
 \cardborder{} 
-\cardcontent{Unleash twice. Adjust the intensity by up to 2. \newline \Or \newline Any player and Gravehold each suffer 2 damage.} 
-\cardprice{1} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{general} 
-\cardtitle{Vexthorn} 
-\cardborder{} 
-\cardcontent{\Persistent: If the intensity is 4 or higher, Gravehold suffers 3 damage. Otherwise, any player suffers 2 damage} 
-\cardprice{1} 
-\cardhp{6} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{general} 
-\cardtitle{Harrowfang} 
-\cardborder{} 
-\cardcontent{\Persistent: Unleash. If the intensity is 4 or higher, Unleash and reduce the Intensity by 1.} 
-\cardprice{1} 
-\cardhp{5} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{general} 
-\cardtitle{Doom Plume} 
-\cardborder{} 
-\cardcontent{\To \Discard: Spend 6 \Money{}. \newline \Power 4: Unleash twice. Gravehold suffers 2 damage.} 
-\cardprice{1} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{general} 
-\cardtitle{Raucous Tune} 
-\cardborder{} 
-\cardcontent{\To \Discard: Spend 5 \Money. \newline \Power 2: Unleash. The players collectively discard cards in hand equal to the intensity.} 
-\cardprice{1} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{general} 
-\cardtitle{Shadowburst} 
-\cardborder{} 
-\cardcontent{\To \Discard: Spend 6 \Money{}. \newline \Power 3: Unleash. If the intensity is 4 or higher, Unleash twice.} 
-\cardprice{1} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{general} 
-\cardtitle{Decay} 
-\cardborder{} 
-\cardcontent{Unleash twice. \newline Any player or Gravehold suffers 3 damage.} 
+\cardcontent{\Cast: Deal 2 damage. \newline If this was cast from an opened breach, you may place this into any ally's hand.} 
 \cardprice{2} 
-\sync{0.17}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{general} 
-\cardtitle{Sonic Crash} 
+\cardbackground{Treasured spell} 
+\cardimage{Treasure} 
+\cardtitle{Wound Mender} 
 \cardborder{} 
-\cardcontent{If the intensity is 6, Gravehold suffers 7 damage. Otherwise, Any player discards two cards in hand and suffers 3 damage.} 
-\cardprice{2} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{general} 
-\cardtitle{Mutilate} 
-\cardborder{} 
-\cardcontent{Unleash twice. \newline The players collectively discard two prepped spells that cost 0 \Money. Any player suffers 2 damage.} 
-\cardprice{2} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{general} 
-\cardtitle{Oblivoros} 
-\cardborder{} 
-\cardcontent{While the intensity is 4 or higher, reduce damage dealt to this minion by 2 (minimum 1). \newline \Persistent: Any player suffers 2 damage.} 
-\cardprice{2} 
-\cardhp{8} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{general} 
-\cardtitle{Nethermaw} 
-\cardborder{} 
-\cardcontent{When this is defeated, if the intensity is 4 or higher, Unleash twice. \Persistent: Gravehold suffers 2 damage.} 
-\cardprice{2} 
-\cardhp{9} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{general} 
-\cardtitle{Umbralspike} 
-\cardborder{} 
-\cardcontent{\To \Discard: Spend 7 \Money{}. \newline \Power 2: Unleash twice. Reduce the intensity by 2. If the intensity is 3 or higher, repeat this.} 
-\cardprice{2} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{general} 
-\cardtitle{Toxic Surge} 
-\cardborder{} 
-\cardcontent{\To \Discard: Discard four cards in hand. \newline \Power 2: Unleash twice. The players discard each prepped spell that costs equal to or greater than the intensity.} 
-\cardprice{2} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{general} 
-\cardtitle{Eliminate} 
-\cardborder{} 
-\cardcontent{Unleash three times. \newline \Or \newline Gravehold suffers 6 damage. \newline \Or \newline Any player suffers 5 damage. } 
-\cardprice{3} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{general} 
-\cardtitle{Disperse} 
-\cardborder{} 
-\cardcontent{Unleash twice. \newline Any player suffers 2 damage and destroys their most expensive card in hand.} 
-\cardprice{3} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{general} 
-\cardtitle{Topple} 
-\cardborder{} 
-\cardcontent{Unleash twice. \newline Gravehold suffers 4 damage.} 
-\cardprice{3} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{general} 
-\cardtitle{Volcaris} 
-\cardborder{} 
-\cardcontent{\Persistent: Any player suffers damage equal to the intensity. Increase the intensity by 1.} 
-\cardprice{3} 
-\cardhp{9} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{general} 
-\cardtitle{Harbinger of Doom} 
-\cardborder{} 
-\cardcontent{\Persistent: If the intensity is 4 or higher, Gravehold suffers damage equal to the intensity. Otherwise, Unleash twice.} 
-\cardprice{3} 
-\cardhp{11} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{general} 
-\cardtitle{Ragestrom} 
-\cardborder{} 
-\cardcontent{\To \Discard: If the intensity is 4 or higher, destroy three opened breaches, otherwise destroy one opened breach. \newline \Power 2: Unleash three times.} 
-\cardprice{3} 
-\sync{0.17}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{general} 
-\cardtitle{Curled Jaw} 
-\cardborder{} 
-\cardcontent{\Power 2: Unleash. The player with the most expensive prepped spell destroys it. If that spell costs less than the intensity, Unleash and any player suffers 3 damage.} 
-\cardprice{3} 
-\sync{0.17}
->>>>>>> Stashed changes
+\cardcontent{\Echo \newline \Cast: Deal 2 damage. \newline If this was cast from an opened III or IV breach, gain 1 life.} 
+\cardprice{5} 
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
