--- a/ZXcList3.tex
+++ b/ZXcList3.tex
@@ -6,202 +6,122 @@
 \begin{document}
 \begin{center}\begin{tikzpicture} 
 \cardbackground{Gem} 
+\cardimage{m1} 
+\cardtitle{Reality Shard} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money. \newline The next time you gain a charge this turn, Adstra gains 1 knowledge.} 
+\cardprice{0} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m2} 
+\cardtitle{Lurk} 
+\cardborder{} 
+\cardcontent{While prepped, once per turing during your main phase gain 1 \Money. \newline \Cast: Deal 1 damage.} 
+\cardprice{0} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{m3} 
+\cardtitle{Gilded Opalite} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money. \newline \Or \newline Destroy a spell in hand. Gain a spell that costs up to 3 \Money more than it from the supply.} 
+\cardprice{0} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{m3} 
+\cardtitle{Sparkler} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 1 damage.} 
+\cardprice{1} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{m5} 
+\cardtitle{Iron Clump} 
+\cardborder{} 
+\cardcontent{Gain a charge. \newline \Or \newline Gain 2 \Money that can only be used to gain cards from Rel'kar's Armory.} 
+\cardprice{0} 
+\sync{0.18}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
 \cardimage{m6} 
-\cardtitle{Fused Opral} 
+\cardtitle{Ancient Ivory} 
 \cardborder{} 
-\cardcontent{Gain 1 \Money{}. Any ally may discard a spell in hand. If they do, that ally gains 1 \Money{} token.} 
+\cardcontent{When a turn order card is drawn, you may discard this and draw a card to place that turn order card on the bottom of the turn order deck instead of resolving it. \newline Gain 1 \Money.} 
 \cardprice{0} 
-\sync{0.14}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Gem} 
+\cardbackground{Spell} 
 \cardimage{m8} 
-\cardtitle{Emberstone Forge} 
+\cardtitle{Aether Siphon} 
 \cardborder{} 
-\cardcontent{\small {Gain 1 \Money{}.} \newline \Or \newline \small {Any ally destroys a gem in hand. That player gains a card that costs up to 2 \Money{} more than the destroyed card from the Arcanite deck and places it into their hand.}} 
+\cardcontent{While prepped, when you cast a spell you may prevent the damage that spell would do and instead gain that much aether instead. \newline \Cast: Deal 1 damage.} 
 \cardprice{0} 
-\sync{0.14}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Gem} 
-\cardimage{m7} 
-\cardtitle{Genesis Emerald} 
+\cardimage{m9} 
+\cardtitle{Sky Geode} 
 \cardborder{} 
-\cardcontent{Gain 1 \Money{}. \newline \Or \newline Discard two cards in hand. If you do, gain the top card of the Firethorn deck. Place that card in any player's discard pile.} 
+\cardcontent{Gain 1 \Money. \newline \Or \newline Cast a spell prepped to one of your breaches.} 
 \cardprice{0} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{m10} 
-\cardtitle{Doomstone} 
-\cardborder{} 
-\cardcontent{Gain 3 \Money{}. Slyvia gains 2 doom. \newline \Or \newline Slyvia loses 1 doom.} 
-\cardprice{0} 
-\sync{0.14}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Gem} 
 \cardimage{m10} 
-\cardtitle{Doomstone} 
+\cardtitle{Bright Stone} 
 \cardborder{} 
-\cardcontent{Gain 3 \Money{}. Slyvia gains 2 doom. \newline \Or \newline Slyvia loses 1 doom.} 
+\cardcontent{Gain 1 \Money. \newline \Or \newline Destroy a card from the supply of a gem or relic you played this turn. If you do, resolve that card's effect again.} 
 \cardprice{0} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{m13} 
-\cardtitle{Reality Weaver} 
-\cardborder{} 
-\cardcontent{Gain 1 \Money{}. The next time you gain a charge this turn, Althea 1 knowledge.} 
-\cardprice{0} 
-\sync{0.14}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Relic} 
-\cardimage{m2} 
-\cardtitle{Sagestone Staff} 
+\cardimage{m11} 
+\cardtitle{Frozen Melody} 
 \cardborder{} 
-\cardcontent{Gain 1 \Money{}. \newline You may lose 1 knowledge. If you do, gain a charge.} 
+\cardcontent{Focus your closed breach with the lowest focus cost.} 
 \cardprice{0} 
-\sync{0.14}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{m2} 
-\cardtitle{Sagestone Staff} 
+\cardbackground{Spell} 
+\cardimage{m11} 
+\cardtitle{Harmony} 
 \cardborder{} 
-\cardcontent{Gain 1 \Money{}. \newline You may lose 1 knowledge. If you do, gain a charge.} 
+\cardcontent{While prepped, when one of your breaches is opened, gain a charge. \newline \Cast: Deal 1 damage.} 
 \cardprice{0} 
-\sync{0.14}
+\sync{0.18}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{m7} 
-\cardtitle{Blooming Firethorn} 
+\cardbackground{} 
+\cardimage{} 
+\cardtitle{Blank} 
 \cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. Conjure.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{m7} 
-\cardtitle{Blooming Firethorn} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. Conjure.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{m7} 
-\cardtitle{Revealing Firethorn} 
-\cardborder{} 
-\cardcontent{\Cast Deal 3 damage. Focus your breach with the lowest focus cost.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{m7} 
-\cardtitle{Revealing Firethorn} 
-\cardborder{} 
-\cardcontent{\Cast Deal 3 damage. Focus your breach with the lowest focus cost.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{m7} 
-\cardtitle{Imbued Firethorn} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. \newline If you have 2 or more charges, you may destroy a card in hand.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{m7} 
-\cardtitle{Imbued Firethorn} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. \newline If you have 2 or more charges, you may destroy a card in hand.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{m7} 
-\cardtitle{Arcing Firethorn} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. Gain 1 charge.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{m7} 
-\cardtitle{Arcing Firethorn} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. Gain 1 charge.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{m7} 
-\cardtitle{Bursting Firethorn} 
-\cardborder{} 
-\cardcontent{While prepped, when you gain a card, deal 1 damage. \newline \Cast: Deal 3 damage.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{m7} 
-\cardtitle{Bursting Firethorn} 
-\cardborder{} 
-\cardcontent{While prepped, when you gain a card, deal 1 damage. \newline \Cast: Deal 3 damage.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{m10} 
-\cardtitle{Call of Doom} 
-\cardborder{} 
-\cardcontent{\Cast: Sylvia gains 2 doom. Deal 3 damage. \newline \Or \newline \Cast: Deal 0 damage. Sylvia loses 1 doom.} 
-\cardprice{0} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{m10} 
-\cardtitle{Call of Doom} 
-\cardborder{} 
-\cardcontent{\Cast: Sylvia gains 2 doom. Deal 3 damage. \newline \Or \newline \Cast: Deal 0 damage. Sylvia loses 1 doom.} 
-\cardprice{0} 
-\sync{0.14}
+\cardcontent{} 
+\cardprice{} 
+\sync{}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
